Update and rename Webinar_Attendee_Guide.md to README

--- a/README
+++ b/README
@@ -7,8 +7,8 @@
 
 **Title:** "Transform Your Business Intelligence with Snowflake Intelligence: A PawCore Systems Case Study"  
 **Date:** [To be scheduled]  
-**Duration:** 60 minutes  
-**Presenter:** Caleb Alexander, Product Manager, Snowflake  
+**Duration:** 90 minutes  
+**Presenter:** Caleb Alexander, Associate Solution Engineer, Snowflake  
 **Format:** Live interactive demo with Q&A session
 
 ---
