Fix data alignment: Add missing files to upload instructions
✅ Added missing files to upload instructions:
   - support_tickets.csv (support team escalation evidence)
   - warranty_costs.csv (financial impact data)
   - Quarterly_Sales_Speech_PawCore.md (additional document)

✅ Updated both Master Guide and Notebook with:
   - Complete file list for all 3 stages
   - New table definitions for SUPPORT_TICKETS & WARRANTY_COSTS
   - Updated data loading scripts
   - Enhanced verification queries
   - Improved expected results documentation

✅ Now 100% aligned: Instructions match actual repository data files
✅ Enhances mystery storyline with additional evidence sources

--- a/PawCore SI Webinar/PawCore Setup.ipynb
+++ b/PawCore SI Webinar/PawCore Setup.ipynb
@@ -107,12 +107,15 @@
     "- `email_campaigns.csv`\n",
     "- `enhanced_sales_data.csv`\n",
     "- `social_media_posts.csv`\n",
+    "- `support_tickets.csv`\n",
+    "- `warranty_costs.csv`\n",
     "\n",
     "### To DOCUMENT_STAGE:\n",
     "- `customer_reviews.csv` ⭐ **Critical for mystery**\n",
     "- `pawcore_slack.csv` ⭐ **Critical for mystery**\n",
     "- `Q4_2024_PawCore_Financial_Report.md`\n",
     "- `Sales_Performance_Q4_2024.md`\n",
+    "- `Quarterly_Sales_Speech_PawCore.md`\n",
     "\n",
     "### To AUDIO_STAGE:\n",
     "- `PawCore Quarterly Call.mp3`\n",
@@ -211,6 +214,24 @@
     "  CUSTOMER_SEGMENT STRING\n",
     ");\n",
     "\n",
+    "-- Additional mystery support tables\n",
+    "CREATE TABLE IF NOT EXISTS SUPPORT_TICKETS (\n",
+    "  TICKET_ID STRING,\n",
+    "  DATE DATE,\n",
+    "  REGION STRING,\n",
+    "  PRODUCT STRING,\n",
+    "  FIRMWARE_VERSION STRING,\n",
+    "  CATEGORY STRING,\n",
+    "  STATUS STRING\n",
+    ");\n",
+    "\n",
+    "CREATE TABLE IF NOT EXISTS WARRANTY_COSTS (\n",
+    "  PERIOD STRING,\n",
+    "  REGION STRING,\n",
+    "  PRODUCT STRING,\n",
+    "  COST_EUR NUMBER(10,2)\n",
+    ");\n",
+    "\n",
     "SELECT 'Tables created!' AS status;\n"
    ]
   },
@@ -292,7 +313,18 @@
     "INSERT INTO PET_OWNERS (CUSTOMER_ID, CUSTOMER_NAME, PET_TYPE, PET_NAME, REGION, SEGMENT, JOIN_DATE)\n",
     "SELECT UUID_STRING(), CUSTOMER_NAME, NULL, NULL, NULL, NULL, CURRENT_DATE() FROM PET_OWNERS_STG;\n",
     "\n",
-    "SELECT 'Unstructured data loaded!' AS status;\n"
+    "-- Load additional mystery support data\n",
+    "COPY INTO SUPPORT_TICKETS (TICKET_ID, DATE, REGION, PRODUCT, FIRMWARE_VERSION, CATEGORY, STATUS)\n",
+    "FROM @INTERNAL_DATA_STAGE/support_tickets.csv\n",
+    "FILE_FORMAT = CSV_FORMAT\n",
+    "ON_ERROR = 'CONTINUE';\n",
+    "\n",
+    "COPY INTO WARRANTY_COSTS (PERIOD, REGION, PRODUCT, COST_EUR)\n",
+    "FROM @INTERNAL_DATA_STAGE/warranty_costs.csv\n",
+    "FILE_FORMAT = CSV_FORMAT\n",
+    "ON_ERROR = 'CONTINUE';\n",
+    "\n",
+    "SELECT 'All data loaded!' AS status;\n"
    ]
   },
   {
@@ -313,6 +345,8 @@
     "UNION ALL SELECT 'CUSTOMER_REVIEWS', COUNT(*) FROM CUSTOMER_REVIEWS\n",
     "UNION ALL SELECT 'SLACK_MESSAGES', COUNT(*) FROM SLACK_MESSAGES\n",
     "UNION ALL SELECT 'PET_OWNERS', COUNT(*) FROM PET_OWNERS\n",
+    "UNION ALL SELECT 'SUPPORT_TICKETS', COUNT(*) FROM SUPPORT_TICKETS\n",
+    "UNION ALL SELECT 'WARRANTY_COSTS', COUNT(*) FROM WARRANTY_COSTS\n",
     "ORDER BY table_name;\n"
    ]
   },
@@ -378,6 +412,8 @@
     "- `RETURNS`: Look for Lot 341 anomalies ⭐\n",
     "- `CUSTOMER_REVIEWS`: Q4 SmartCollar complaints ⭐\n",
     "- `SLACK_MESSAGES`: Support escalation patterns ⭐\n",
+    "- `SUPPORT_TICKETS`: Evidence of support team overwhelm ⭐\n",
+    "- `WARRANTY_COSTS`: Financial impact escalation ⭐\n",
     "- `HR_RESUMES`: Candidates for staffing solution\n",
     "\n",
     "**Ready to solve the mystery? Let's go! 🕵️‍♂️**\n"
