Final cleanup and update of project files

--- a/PawCore SI Webinar/PawCore Setup.ipynb
+++ b/PawCore SI Webinar/PawCore Setup.ipynb
@@ -132,15 +132,19 @@
         "\n",
         "-- Core sales and business tables\n",
         "CREATE TABLE IF NOT EXISTS PAWCORE_SALES (\n",
+        "  SALE_ID STRING DEFAULT UUID_STRING(),\n",
         "  DATE DATE,\n",
         "  REGION STRING,\n",
         "  PRODUCT STRING,\n",
+        "  PRODUCT_CATEGORY STRING DEFAULT 'Pet Wellness Device',\n",
         "  FORECAST_SALES NUMBER(10,2),\n",
         "  ACTUAL_SALES NUMBER(10,2),\n",
         "  VARIANCE NUMBER(10,2),\n",
         "  PCT_OF_FORECAST NUMBER(5,2),\n",
         "  INVENTORY_UNITS_AVAILABLE INTEGER,\n",
-        "  MARKETING_ENGAGEMENT_SCORE INTEGER\n",
+        "  MARKETING_ENGAGEMENT_SCORE INTEGER,\n",
+        "  SALES_REP STRING DEFAULT 'TBD',\n",
+        "  CUSTOMER_SEGMENT STRING DEFAULT 'Standard'\n",
         ");\n",
         "\n",
         "-- 🚨 Critical mystery table\n",
@@ -152,8 +156,8 @@
         "  LOT_ID STRING,\n",
         "  REASON STRING,\n",
         "  QTY NUMBER,\n",
-        "  UNIT_COST_EUR NUMBER(10,2),\n",
-        "  TOTAL_COST_EUR NUMBER(10,2)\n",
+        "  UNIT_COST_USD NUMBER(10,2),\n",
+        "  TOTAL_COST_USD NUMBER(10,2)\n",
         ");\n",
         "\n",
         "-- HR table for hiring bonus\n",
@@ -176,12 +180,16 @@
         ");\n",
         "\n",
         "CREATE TABLE IF NOT EXISTS DEVICE_SALES_BY_REGION (\n",
+        "  SALES_ID STRING DEFAULT UUID_STRING(),\n",
         "  DATE DATE,\n",
         "  REGION STRING,\n",
         "  DEVICE_TYPE STRING,\n",
+        "  PRODUCT_NAME STRING,\n",
         "  UNITS_SOLD INTEGER,\n",
         "  REVENUE NUMBER(10,2),\n",
-        "  GROWTH_RATE NUMBER(5,2)\n",
+        "  GROWTH_RATE NUMBER(5,2),\n",
+        "  QUARTER STRING,\n",
+        "  SALES_CHANNEL STRING DEFAULT 'Online'\n",
         ");\n",
         "\n",
         "-- Unstructured data tables\n",
@@ -198,7 +206,9 @@
         "  REVIEW_ID STRING,\n",
         "  DATE DATE,\n",
         "  PRODUCT STRING,\n",
+        "  PRODUCT_CATEGORY STRING DEFAULT 'Pet Device',\n",
         "  CUSTOMER_NAME STRING,\n",
+        "  CUSTOMER_ID STRING,\n",
         "  RATING INTEGER,\n",
         "  REVIEW_TEXT STRING,\n",
         "  SENTIMENT STRING,\n",
@@ -207,7 +217,9 @@
         "  HELPFUL_VOTES INTEGER,\n",
         "  REVIEW_LENGTH INTEGER,\n",
         "  REGION STRING,\n",
-        "  CUSTOMER_SEGMENT STRING\n",
+        "  CUSTOMER_SEGMENT STRING,\n",
+        "  PURCHASE_DATE DATE,\n",
+        "  DEVICE_AGE_DAYS INTEGER\n",
         ");\n",
         "\n",
         "-- Mystery support tables\n",
@@ -225,7 +237,7 @@
         "  PERIOD STRING,\n",
         "  REGION STRING,\n",
         "  PRODUCT STRING,\n",
-        "  COST_EUR NUMBER(10,2)\n",
+        "  COST_USD NUMBER(10,2)\n",
         ");\n",
         "\n",
         "SELECT '✅ All tables created!' AS status;\n"
@@ -243,7 +255,7 @@
       "source": [
         "-- 4️⃣ Load Critical Mystery Data\n",
         "\n",
-        "-- Core sales data\n",
+        "-- Core sales data with enhanced columns\n",
         "COPY INTO PAWCORE_SALES (\n",
         "  DATE, REGION, PRODUCT, FORECAST_SALES, ACTUAL_SALES, VARIANCE,\n",
         "  PCT_OF_FORECAST, INVENTORY_UNITS_AVAILABLE, MARKETING_ENGAGEMENT_SCORE\n",
@@ -252,9 +264,30 @@
         "FILE_FORMAT = CSV_FORMAT\n",
         "ON_ERROR = 'CONTINUE';\n",
         "\n",
+        "-- Enhance sales data with additional business context\n",
+        "UPDATE PAWCORE_SALES SET \n",
+        "  PRODUCT_CATEGORY = CASE \n",
+        "    WHEN PRODUCT LIKE '%SmartCollar%' THEN 'Smart Monitoring'\n",
+        "    WHEN PRODUCT LIKE '%HealthMonitor%' THEN 'Health Tracking'\n",
+        "    WHEN PRODUCT LIKE '%PetTracker%' THEN 'Location Tracking'\n",
+        "    ELSE 'Pet Wellness Device'\n",
+        "  END,\n",
+        "  SALES_REP = CASE \n",
+        "    WHEN REGION = 'EMEA' THEN 'Sarah Chen'\n",
+        "    WHEN REGION = 'North America' THEN 'Marcus Rodriguez'\n",
+        "    WHEN REGION = 'Asia Pacific' THEN 'Yuki Tanaka'\n",
+        "    ELSE 'Regional Team'\n",
+        "  END,\n",
+        "  CUSTOMER_SEGMENT = CASE \n",
+        "    WHEN ACTUAL_SALES > 50000 THEN 'Enterprise'\n",
+        "    WHEN ACTUAL_SALES > 20000 THEN 'Professional'\n",
+        "    ELSE 'Standard'\n",
+        "  END\n",
+        "WHERE PRODUCT_CATEGORY IS NULL;\n",
+        "\n",
         "-- 🚨 CRITICAL: Mystery returns data\n",
         "COPY INTO RETURNS (\n",
-        "  RETURN_ID, DATE, REGION, PRODUCT, LOT_ID, REASON, QTY, UNIT_COST_EUR, TOTAL_COST_EUR\n",
+        "  RETURN_ID, DATE, REGION, PRODUCT, LOT_ID, REASON, QTY, UNIT_COST_USD, TOTAL_COST_USD\n",
         ")\n",
         "FROM @INTERNAL_DATA_STAGE/returns.csv\n",
         "FILE_FORMAT = CSV_FORMAT\n",
@@ -274,7 +307,7 @@
         "FILE_FORMAT = CSV_FORMAT\n",
         "ON_ERROR = 'CONTINUE';\n",
         "\n",
-        "COPY INTO WARRANTY_COSTS (PERIOD, REGION, PRODUCT, COST_EUR)\n",
+        "COPY INTO WARRANTY_COSTS (PERIOD, REGION, PRODUCT, COST_USD)\n",
         "FROM @INTERNAL_DATA_STAGE/warranty_costs.csv\n",
         "FILE_FORMAT = CSV_FORMAT\n",
         "ON_ERROR = 'CONTINUE';\n",
@@ -319,6 +352,19 @@
         "FILE_FORMAT = CSV_FORMAT\n",
         "FORCE = TRUE\n",
         "ON_ERROR = 'CONTINUE';\n",
+        "\n",
+        "-- Enhance customer reviews with additional context\n",
+        "UPDATE CUSTOMER_REVIEWS SET \n",
+        "  PRODUCT_CATEGORY = CASE \n",
+        "    WHEN PRODUCT LIKE '%SmartCollar%' THEN 'Smart Monitoring'\n",
+        "    WHEN PRODUCT LIKE '%HealthMonitor%' THEN 'Health Tracking'\n",
+        "    WHEN PRODUCT LIKE '%PetTracker%' THEN 'Location Tracking'\n",
+        "    ELSE 'Pet Device'\n",
+        "  END,\n",
+        "  CUSTOMER_ID = 'CUST_' || ABS(HASH(CUSTOMER_NAME)),\n",
+        "  PURCHASE_DATE = DATEADD(day, -UNIFORM(30, 365, RANDOM()), DATE),\n",
+        "  DEVICE_AGE_DAYS = DATEDIFF(day, PURCHASE_DATE, DATE)\n",
+        "WHERE PRODUCT_CATEGORY IS NULL;\n",
         "\n",
         "-- Load supporting customer data\n",
         "CREATE OR REPLACE TABLE PET_OWNERS_STG (CUSTOMER_NAME STRING, PHONE STRING, EMAIL STRING);\n",
@@ -388,7 +434,7 @@
         "        LOT_ID,\n",
         "        REGION,\n",
         "        SUM(QTY) AS returned_units,\n",
-        "        SUM(TOTAL_COST_EUR) AS total_cost\n",
+        "        SUM(TOTAL_COST_USD) AS total_cost\n",
         "    FROM RETURNS\n",
         "    WHERE PRODUCT = 'SmartCollar'\n",
         "    GROUP BY 1, 2, 3\n",
@@ -403,7 +449,7 @@
         "    w.LOT_ID,\n",
         "    w.REGION,\n",
         "    w.returned_units,\n",
-        "    ROUND(w.total_cost, 0) AS cost_eur,\n",
+        "    ROUND(w.total_cost, 0) AS cost_usd,\n",
         "    ROUND(b.avg_baseline, 1) AS baseline,\n",
         "    ROUND(w.returned_units / NULLIF(b.avg_baseline, 0), 1) AS spike_multiplier,\n",
         "    CASE \n",
